--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
     <footer class="text-center p-3 fst-italic">
         <p>Acesse nossas redes:</p>
         <i class="bi bi-whatsapp"></i>
-        <i class="bi bi-instagram"></i>
+        <i class="bi bi-instagram">@tomie.iraha</i>
         <i class="bi bi-tiktok"></i>
-        <p class="mt-3">Desenvolvido por Start by Alura. Projeto fictício sem fins comerciais.</p>
+        <p class="mt-3">Desenvolvido por Luiza Tomie. Projeto fictício sem fins comerciais.</p>
     </footer>
     <script src="script.js"></script>
 
