--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -51,7 +52,7 @@
               </div>
         </section>
 
-        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" aria-label="Seção explicativa sobre a tropicália">
+        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
@@ -67,7 +68,7 @@
             </div>
         </section>
 
-        <section id="galeria" aria-label="Seção de galeria de imagens">
+        <section id="galeria" tabindex="0" aria-label="Seção de galeria de imagens">
             <h2 class="text-center pt-5">Galeria</h2>
             <div class="container p-3 mt-3 fundo-galeria ">
 
@@ -124,11 +125,14 @@
     </main>
     <footer class="text-center p-3 fst-italic">
         <p>Acesse nossas redes:</p>
-        <i class="bi bi-instagram">@tomie.iraha</i>
-        <p class="mt-3">Desenvolvido por Luiza Tomie. Projeto fictício sem fins comerciais.</p>
+        <i class="bi bi-whatsapp"></i>
+        <i class="bi bi-instagram"></i>
+        <i class="bi bi-tiktok"></i>
+        <p class="mt-3">Desenvolvido por Start by Alura. Projeto fictício sem fins comerciais.</p>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.js"></script>
     <script src="script.js"></script>
-
+  
 </body>
 
 </html>
