--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>Tropicália</title>
+    <title>Mama Mia</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -58,12 +58,13 @@
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <h2>Sobre o filme</h2>
+                    <p class="p-2">O filme de 2008 conta a história Sophie, a noiva, encontra um diário da mãe, Donna, e descobre que ela teve relacionamentos com três homens, Harry, Bill e Sam, antes de seu nascimento.
+                        Por isso, decide convidar os três para seu casamento, na ilha grega de Kalokairi, para descobrir quem é seu pai. 
+  As Canções:
+A narrativa é contada através de sucessos do ABBA, como "Dancing Queen" e "Take A Chance On Me". 
+  O Sucesso:
+O musical estreou em Londres em 1999 e ganhou o mundo, dando origem a filmes populares em 2008 e 2018. </p>
                 </div>
             </div>
         </section>
@@ -125,10 +126,8 @@
     </main>
     <footer class="text-center p-3 fst-italic">
         <p>Acesse nossas redes:</p>
-        <i class="bi bi-whatsapp"></i>
-        <i class="bi bi-instagram"></i>
-        <i class="bi bi-tiktok"></i>
-        <p class="mt-3">Desenvolvido por Start by Alura. Projeto fictício sem fins comerciais.</p>
+        <i class="bi bi-instagram">@tomie.iraha</i>
+        <p class="mt-3">Desenvolvido por Luiza Tomie. Projeto fictício sem fins comerciais.</p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.js"></script>
     <script src="script.js"></script>
